tests/wordpress/fail/wp-includes/version.php
/**
 *  * The WordPress version string
 *   *
 *    * @global string $wp_version
 *     */
$wp_version = '2.8.2';

